--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 	<title>hahaha</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://fonts.googleapis.com/css?family=Odibee+Sans&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
 	<link rel="stylesheet" type="text/css" href="guu.css">
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 	
@@ -18,8 +20,8 @@
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%); }">
-		FineArts Club
-		<span2 style="font-size: 50%">nita</span2>
+		Debaprasad
+		<span2 style="font-size: 50%">Paul</span2>
 	</p>
 	</div>
 	<div class="gooey">
@@ -31,10 +33,31 @@
 	  </div>
 	</div>
 </div>
-
-	<div class="main-content">
-		
-	</div>
+		<div class="container">
+				<nav class="nav">
+				<div class="social-media-cta">
+					<h1>Explore Here</h1>
+				</div>
+				<div class="separator-line"></div>
+				<ul class="nav-list">
+					<li class="nav-item">
+						<a href="https://www.facebook.com/debaprasad.paul.16" class="nav-link"><i class="fab fa-facebook-f"></i></a>
+					</li>
+					<li class="nav-item">
+						<a href="https://twitter.com/paul_debaprasad" class="nav-link"><i class="fab fa-twitter"></i></a>
+					</li>
+					<li class="nav-item">
+						<a href="https://www.behance.net/debaprasadpaul" class="nav-link"><i class="fab fa-behance-square"></i></a>
+					</li>
+					<li class="nav-item">
+						<a href="https://github.com/Debaprasad-dez" class="nav-link"><i class="fab fa-github-square"></i></a>
+					</li>
+					<li class="nav-item">
+						<a href="https://www.linkedin.com/in/debaprasad-paul-a03421138/" class="nav-link"><i class="fab fa-linkedin-in"></i></a>
+					</li>
+				</ul>
+			</nav>
+		</div>
 
 	<script>
     let loader = document.querySelector('.loader');
