--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link href="https://fonts.googleapis.com/css?family=Odibee+Sans&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Righteous&display=swap" rel="stylesheet">
-	<title>bhoo</title>
+	<title>Mazaak inc.</title>
+	<link rel="shortcut icon" href="sp1.png" type="image/x-icon">
 	<link rel="stylesheet" href="hur.css">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link rel="stylesheet" type="text/css" href="guu.css">
