--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
 
     <section class="hero"></section>
     <section class="demo-content"></section>
+    <section class="demo-content2"></section>
+    <section class="demo-content3"></section>
 
     <footer>
     	<div class="container2">
@@ -88,7 +90,7 @@
 						<a href="https://www.linkedin.com/in/debaprasad-paul-a03421138/" class="nav-link"><i class="fab fa-linkedin-in"></i></a>
 					</li>
 				</ul>
-				
+
 			</nav>
 			<div>
 				<a href="#" id="Buy">Buy Artworks</a>
